tests/fsharp/typecheck/sigs/neg83.bsl

neg83.fsx(10,5,10,6): parse error FS0010: Unexpected symbol '|' in expression

neg83.fsx(13,1,13,2): parse error FS0058: Possible incorrect indentation: this token is offside of context started at position (4:4). Try indenting this token further or using standard formatting conventions.

neg83.fsx(13,2,13,5): parse error FS0058: Possible incorrect indentation: this token is offside of context started at position (4:4). Try indenting this token further or using standard formatting conventions.

neg83.fsx(13,2,13,5): parse error FS0058: Possible incorrect indentation: this token is offside of context started at position (4:4). Try indenting this token further or using standard formatting conventions.

neg83.fsx(16,1,16,1): parse error FS0010: Incomplete structured construct at or before this point in expression
